# MolVision

./: .gitignore  README.md  index.html  main.py  pyproject.toml
blip2/: finetune_inference.py
dataset/: data_loader.py
evaluate/: classification.py
models/: cogvlm.py  gpt.py  model_config.py
mplugowl/: inference.py
notebooks/mplugowl/: mPlugOwl2_Molvision.ipynb
notebooks/qwen/: Qwen_ICL_Inference.ipynb
qwen/: inference.py
static/css/: index.css
static/js/: leaderboard.js
static/json/: leaderboard-classification.json  leaderboard-description.json  leaderboard-regression.json
virtual_envs/cogvlm/: pyproject.toml
