[project]
name = "molvision"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "datasets>=3.6.0",
    "einops>=0.8.1",
    "numpy>=2.2.6",
    "openai>=1.79.0",
    "pandas>=2.2.3",
    "pillow>=11.2.1",
    "protobuf>=6.32.1",
    "sentencepiece>=0.2.1",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
    "xformers>=0.0.32.post2",
]
