[project]
name = "molvision"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.9.*"
dependencies = [
    "accelerate==0.24.1",
    "datasets>=2.14.4",
    "einops==0.7.0",
    "pandas>=2.3.3",
    "sentencepiece==0.1.99",
    "torch==2.1.0",
    "transformers==4.35.0",
    "xformers==0.0.22.post7",
]
